fix spacing for mobile

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -15,5 +15,6 @@
   .header__logo {
     width: 126px;
     height: 24px;
+    padding-left: 27px;
   }
 }
